logic added for generic methods that create SyntaxNodes

--- a/code/SyntaxGeneration/SyntaxGeneration/SyntaxGeneration.csproj
+++ b/code/SyntaxGeneration/SyntaxGeneration/SyntaxGeneration.csproj
@@ -207,10 +207,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builder\WebjobGenerator.cs" />
     <Compile Include="Builder\CodeGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\GenericClass.cs" />
+    <Compile Include="Template.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
